test/parsetest/valid/g5_ifElse2.java
class A {
  public void a() {
  
    if (true)
      if (true)
        ;
      else
        ;
    else
      if (true)
        ;
      else
        ;
    
  }
}
