test/parsetest/invalid/g5_missingBraces.java
class A {
  public void a() {
    
    {
      {
        ;
      }
    } {
      ;
    
  }
}
